[package]
name = "hilbert_curve"
version = "0.2.0"
description = "A simple implementation of Hilbert curve mapping algorithms in Rust"
repository = "https://github.com/ljedrz/hilbert_curve"
documentation = "https://docs.rs/hilbert_curve"
readme = "README.md"
authors = ["ljedrz <ljedrz@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
keywords = ["hilbert", "curve", "mathematics", "fractal"]

[dependencies]

[badges]
maintenance = { status = "passively-maintained" }
is-it-maintained-open-issues = { repository = "ljedrz/hilbert_curve" }
